force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>Objeto custom para recoger los proyectos</description>
    <label>Proyecto</label>
    <nameField>
        <displayFormat>Obr-{00000000}</displayFormat>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proyectos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>