force-app/main/default/objects/Project__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que relaciona la fila (relación maestro detalle) con el objeto de cuenta person</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proyectos</relationshipLabel>
    <relationshipName>Proyectos</relationshipName>
    <type>Lookup</type>
</CustomField>