force-app/main/default/objects/Project__c/fields/BenefitGroups__c.field-meta.xml
<CustomField>
    <fullName>BenefitGroups__c</fullName>
    <description>Grupos al que pertenece este proyecto, vendrá desde SAP en fase 2</description>
    <label>Grupos Centros Beneficios</label>
    <length>90</length>
    <type>Text</type>
</CustomField>