force-app/main/default/objects/Project__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <label>Adjudicatario</label>
    <length>90</length>
    <type>Text</type>
</CustomField>