force-app/main/default/objects/Project__c/fields/ExternalSiteCode__c.field-meta.xml
<CustomField>
    <fullName>ExternalSiteCode__c</fullName>
    <description>Código generado por SAP automáticamente en base a un patrón conocido, utilizado para localizar a la obra.</description>
    <externalId>true</externalId>
    <label>Código Obra</label>
    <length>90</length>
    <type>Text</type>
</CustomField>