force-app/main/default/objects/Project__c/fields/ExternalStudyCode__c.field-meta.xml
<CustomField>
    <fullName>ExternalStudyCode__c</fullName>
    <description>Código generado por SAP automáticamente en base a un patrón conocido, utilizado para localizar al estudio.</description>
    <externalId>true</externalId>
    <label>Código Estudio</label>
    <length>90</length>
    <type>Text</type>
</CustomField>