force-app/main/default/objects/Project__c/fields/LossReason__c.field-meta.xml
<CustomField>
    <fullName>LossReason__c</fullName>
    <description>Motivo por el cual el proyecto se ha perdido.</description>
    <label>Motivo Perdida</label>
    <type>TextArea</type>
</CustomField>