force-app/main/default/objects/Project__c/fields/Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partnership__c</fullName>
    <description>Campo que recoge la sociedad de arquitectos.</description>
    <label>Sociedad</label>
    <length>90</length>
    <type>Text</type>
</CustomField>