force-app/main/default/objects/Project__c/fields/Project_Technician__c.field-meta.xml
<CustomField>
    <fullName>Project_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuario de SF que valida el estudio</description>
    <label>Técnico Estudio</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Proyectos</relationshipName>
    <type>Lookup</type>
</CustomField>