force-app/main/default/objects/Project__c/fields/ProjectCategory__c.field-meta.xml
<CustomField>
    <fullName>ProjectCategory__c</fullName>
    <description>Categoría de la obra.</description>
    <label>Categoría Obra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Edificación</fullName>
            </value>
            <value>
                <fullName>Obra Civil</fullName>
            </value>
            <value>
                <fullName>Asfaltos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>