force-app/main/default/objects/Project__c/fields/Site_Manager__c.field-meta.xml
<CustomField>
    <fullName>Site_Manager__c</fullName>
    <description>Campo que recogerá el nombre de jefe de obra del proyecto</description>
    <label>Jefe Obra</label>
    <length>90</length>
    <type>Text</type>
</CustomField>