force-app/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Permite indicar el estado del proyecto, sea Estudio, Licitación, en ejecución de obra, parada y Finalizado.</description>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>Estudio</fullName>
            </value>
            <value>
                <fullName>Licitación</fullName>
            </value>
            <value>
                <fullName>Ejecución Obra</fullName>
            </value>
            <value>
                <fullName>Parada</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>