force-app/main/default/objects/Project__c/fields/StopReason__c.field-meta.xml
<CustomField>
    <fullName>StopReason__c</fullName>
    <description>Motivo por el cual el proyecto se ha parado</description>
    <label>Motivo Parada</label>
    <type>TextArea</type>
</CustomField>