force-app/main/default/objects/Project__c/fields/StudyDate__c.field-meta.xml
<CustomField>
    <fullName>StudyDate__c</fullName>
    <description>Fecha que debe aparecer cuando se presentará del proyecto</description>
    <label>Fecha Presentación Estudio</label>
    <type>Date</type>
</CustomField>