force-app/main/default/objects/Project__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Cuando creen que se va a ejecutar (cuándo se va a producir la venta)</description>
    <label>Año</label>
    <type>Date</type>
</CustomField>